# Minecraft-Rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  DOCUMENTATION_MAP.md  FOLDER_STRUCTURE.md  README.md  analysis_report.md  check_output.txt  check_output_2.txt  check_output_4.txt  ssr_optimization_analysis.md  world.r3d
.github/workflows/: rust.yml
assets/: README.md  atlas_map_structure.json
src/: README.md  block.rs  camera.rs  chunk.rs  chunk_generator.rs  chunk_loader.rs  constants.rs  frustum.rs  lib.rs  main.rs  mesh.rs  mesh_loader.rs  save.rs  shader.wgsl  test_features.rs  texture.rs  uniforms.rs  vertex.rs  world.rs
src/app/: README.md  cloud.rs  game.rs  init.rs  input.rs  mod.rs  render.rs  resize.rs  server.rs  state.rs  texture_cache.rs  update.rs
src/core/: README.md  biome.rs  block.rs  chunk.rs  mod.rs  types.rs  uniforms.rs  vertex.rs
src/multiplayer/: README.md  client.rs  mod.rs  network.rs  player.rs  protocol.rs  quic.rs  server.rs  tcp.rs  transport.rs
src/player/: README.md  camera.rs  input.rs  mod.rs  player_stats.rs
src/render/: README.md  atlas_map.rs  buffer_manager.rs  frustum.rs  indirect.rs  mesh.rs  mesh_loader.rs  mod.rs  texture.rs
src/render_core/: csm.rs  mod.rs
src/shaders/: cloud_composite.wgsl  clouds.wgsl  composite.wgsl  cull.wgsl  depth_resolve.wgsl  hiz.wgsl  shadow.wgsl  sky.wgsl  sky_common.wgsl  ssao.wgsl  ssao_blur.wgsl  sun.wgsl  terrain.wgsl  ui.wgsl  water.wgsl
src/ui/: README.md  menu.rs  mod.rs  ui.rs
src/utils/: README.md  gpu_memory_info.rs  settings.rs  settings_deafult.yaml
(+17 files in other folders)
